<resources>
    <string name="app_name">Assignment2</string>
    <string name="title_activity_maps">Map</string>
    <string name="New_Username">New Username</string>
    <string name="New_Password">Password</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>


</resources>
