<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="56dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">


    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Username" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Password"
         android:inputType="textPassword" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/Login" />

        <Button
            android:id="@+id/register"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/Register" />


    </LinearLayout>





</LinearLayout>